5 September 2007: Wouter
	- cname, name error validator tests.

4 September 2007: Wouter
	- fixup of Leakage warning when serviced queries processed multiple
	  callbacks for the same query from the same server.
	- testbound removes config file from /tmp on failed exit.
	- fixup for referral cleanup of the additional section.
	- tests for cname, referral validation.
	- neater testbound tpkg output.
	- DNAMEs no longer match their apex when synthesized from the cache.
	- find correct signer name for DNAME responses.
	- wildcarded DNAME test and fixup code to detect.
	- prepend NSEC and NSEC3 rrsets in the iterator while chasing CNAMEs.
	  So that wildcarded CNAMEs get their NSEC with them to the answer.
	- test for a CNAME to a DNAME to a CNAME to an answer, all from
	  different domains, for key fetching and signature checking of
	  CNAME'd messages.

3 September 2007: Wouter
	- Fixed error in iterator that would cause assertion failure in 
	  validator. CNAME to a NXDOMAIN response was collated into a response
	  with both a CNAME and the NXDOMAIN rcode. Added a test that the
	  rcode is changed to NOERROR (because of the CNAME).
	- timeout on tcp does not lead to spurious leakage detect.
	- account memory for name of lame zones, so that memory leakages does
	  not show lame cache growth as a leakage growth.
	- config setting for lameness cache expressed in bytes, instead of
	  number of entries.
	- tool too summarize allocations per code line.

31 August 2007: Wouter
	- can read bind trusted-keys { ... }; files, in a compatibility mode. 
	- iterator should not detach target queries that it still could need.
	  the protection against multiple outstanding queries is moved to a
	  current_query num check.
	- validator nodata, positive, referral tests.
	- dname print can print '*' wildcard.

30 August 2007: Wouter
	- fixup override date config option.
	- config options to control memory usage.
	- caught bad free of un-alloced data in worker_send error case.